Fix styles: prevent overlapping SP count and category names

--- a/styles/general.less
+++ b/styles/general.less
@@ -20,12 +20,14 @@
 .vertically-aligned {
   min-height: 42px;
   line-height: 42px;
+  text-align: center;
   span {
     line-height: 20px;
     display: inline-block;
     vertical-align: middle;
   }
 }
+
 
 // Transit colors
 
